--- a/estilos.css
+++ b/estilos.css
@@ -21,3 +21,28 @@
 .textoVerde {
     color: rgb(91, 203, 47);
 }
+
+.cursadas-titulo {
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem;
+}
+
+.cursadas-capturar-nota {
+    margin-top: 30px;
+    padding: 2rem;
+    background-color: aliceblue;
+}
+
+.capturar-nota-titulo {
+    margin-bottom: 20px;
+}
+
+.fila-capturar-nota {
+    padding: 10px;
+}
+
+.guardar-capturar-nota {
+    margin-left: 10px;
+    margin-top: 20px;
+}
