--- a/estilos.css
+++ b/estilos.css
@@ -29,6 +29,12 @@
     color: rgb(91, 203, 47);
 }
 
+/* CURSADAS */
+
+#acordeonCursadas {
+    margin-bottom: 30px;
+}
+
 .cursadas-titulo {
     display: flex;
     justify-content: space-between;
@@ -49,7 +55,7 @@
     padding: 10px;
 }
 
-.guardar-capturar-nota {
+#botonGuardarNota {
     margin-left: 10px;
     margin-top: 20px;
 }
